--- a/Project Overview.yml
+++ b/Project Overview.yml
@@ -20,6 +20,6 @@ Connect on [LinkedIn](https://www.linkedin.com/in/mohammad-auf-4a3a67222/)
 > 📌 Technologies: Python, Selenium, BeautifulSoup, Django, MySQL, VPS (Hostinger)
 >
 > 🔗 GitHub: [https://github.com/mohammad-auf/VIXTrack360]  
-> 🔗 Live Demo / VPS: [http://168.231.75.199/]
+> 🔗 Live Demo / VPS: [https://www.onedelta.us/]
 
 
